Fixed more layout issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,11 @@
 }
 
 .comida {
-	height: 333px;
-	width: 620px;
+	height: 386.5px;
+	width: 650px;
+}
+
+.boys {
+	width: 450px;
+	height: 294px;
 }
